--- a/Google_clon.css
+++ b/Google_clon.css
@@ -18,6 +18,11 @@ header{
     height: 60px;
 }
 
+main{
+    margin-top: 120px;
+    text-align: center;
+}
+
 /*-FIN DE ETIQUETAS GENERALES-*/
 
 
@@ -63,3 +68,65 @@ header .nav_right_section{
 }
 
 /*-Fin del Header-*/
+
+/*-Inicio del Main-*/
+.main_logo{
+    width: 510px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+
+.main_logo img{
+    width: 300px;
+}
+
+.main_input{
+    width: 510px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+.main_input_container{
+    width: 505px;
+    border-radius: 100px;
+    border: 1px solid #dfe1e5;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main_input_container input{
+    width: 420px;
+    height: 35px;
+    border: none;
+    /*-El outline es para quitar el borde cuando se selecciona el input-*/
+    outline: none;
+}
+
+/*-El hover es un efecto visual, cuando el ratos pasa por el contenedor-*/
+.main_input_container:hover{
+    /*-box-shadow es para sombras-*/
+    box-shadow: 0 2px 6px 0 #20212447;
+    border-color: #dfe1e500;
+}
+
+main .search_icon{
+    background-image: url("https://img.icons8.com/android/24/000000/search.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 18px;
+    height: 18px;
+}
+
+main .micro_icon{
+    background-image: url("https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+/*-Fin del Main-*/
