--- a/Google_clon.css
+++ b/Google_clon.css
@@ -61,12 +61,12 @@ header .nav_right_section{
     background-size: contain;
     width: 30px;
     height: 30px;
+    cursor: pointer;
 }
 
 .nav_right_section img{
     border-radius: 50%;
 }
-
 /*-Fin del Header-*/
 
 /*-Inicio del Main-*/
@@ -128,5 +128,33 @@ main .micro_icon{
     width: 20px;
     height: 20px;
     cursor: pointer;
+}
+
+main .main_buttons{
+    width: 510px;
+    margin: 0 auto;
+}
+
+.main_buttons div{
+    display: inline-block;
+}
+
+.main_buttons button{
+    height: 34px;
+    background-color: #f2f2f2;
+    border: 0;
+    font-size: 14px;
+    color: #5f6368;
+    border-radius: 5px;
+    padding: 0 15px;
+    cursor: pointer;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.main_buttons button:hover{
+    border: 1px solid #c6c6c6;
+    box-shadow: 0 1px 1px #000001;
+    color: #222;
 }
 /*-Fin del Main-*/
