--- a/Google_clon.css
+++ b/Google_clon.css
@@ -23,6 +23,20 @@ main{
     text-align: center;
 }
 
+footer{
+    width: 100%;
+    height: 50px;
+    /*-El position y el bottom es para mantener el footer en la parte inferior de la pagina-*/
+    position: absolute;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    font-size: 13px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+}
+
 /*-FIN DE ETIQUETAS GENERALES-*/
 
 
@@ -158,3 +172,25 @@ main .main_buttons{
     color: #222;
 }
 /*-Fin del Main-*/
+
+/*-Inicio del Footer-*/
+footer ul{
+    margin: 10px;
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+}
+
+footer .section_left{
+    justify-self: left;
+}
+
+footer .section_right{
+    justify-self: right;
+}
+
+footer ul li a{
+    margin: 10px;
+    color: #5f6368;
+}
+/*-Fin del Footer-*/
